--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Mini Curso de Git do Código Fonte TV</h1>
     <footer>
-        <p>Desenvolvido por <a href="https://www.codigofontetv.com.br">Código Fonte TV</a></p>
+        <p>Desenvolvido por <a href="https://www.codigofontetv.com.br">Código Fonte TV</a></p> em 2025
     </footer>
 </body>
 </html>
