Atualizações na interface

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Mini Curso de Git do Código Fonte TV</h1>
+    <h2>Saia do zero e comece a versionar o seu código hoje</h2>
     <footer>
         <p>Desenvolvido por <a href="https://www.codigofontetv.com.br">Código Fonte TV</a></p> em 2025
     </footer>
