--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
 <body>
     <h1>Mini Curso de Git do Código Fonte TV</h1>
     <h2>Saia do zero e comece a versionar o seu código hoje</h2>
+    <button onclick="alert('Obrigado por clicar!')">Clique aqui</button>
     <footer>
         <p>Desenvolvido por <a href="https://www.codigofontetv.com.br">Código Fonte TV</a></p> em 2025
     </footer>
